package.json keywords

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "js.class",
-    "version": "2.1.0",
+    "version": "2.1.2",
     "description": "JS.Class simplifies OOP in javascript",
     "homepage": "http://dkraczkowski.github.io/js.class",
     "keywords": [
+		"class",
         "oop",
         "inheritance",
         "extend",
-        "mixin"
+        "mixin",
+		"fast"
     ],
     "private": false,
     "license": "MIT",
