--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js.class",
-    "version": "2.2.3",
+    "version": "2.2.5",
     "description": "JS.Class simplifies OOP in javascript",
     "homepage": "http://dkraczkowski.github.io/js.class",
     "keywords": [
@@ -21,7 +21,8 @@
         "jasmine-node": "latest",
         "benchmark": "latest",
         "class": "latest",
-        "ee-class": "latest"
+        "ee-class": "latest",
+        "klass": "latest"
     },
     "repository": {
         "type": "git",
