--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js.class",
-    "version": "2.5.2",
+    "version": "2.5.3",
     "description": "JS.Class simplifies OOP in javascript",
     "homepage": "http://dkraczkowski.github.io/js.class",
     "keywords": [
@@ -15,7 +15,8 @@
     "private": false,
     "license": "MIT",
     "scripts": {
-        "test": "jasmine-node --verbose --matchall tests"
+        "test": "jasmine-node --verbose --matchall tests",
+        "build": "cp src/js.class.js dist/js.class.js; uglifyjs --comments -c -m -o dist/js.class.min.js -- dist/js.class.js"
     },
     "author": "Dawid Kraczkowski <Krac>",
     "devDependencies": {
@@ -23,7 +24,8 @@
         "benchmark": "latest",
         "class": "latest",
         "ee-class": "latest",
-        "klass": "latest"
+        "klass": "latest",
+        "uglify-js": "2.4.24"
     },
     "repository": {
         "type": "git",
